<resources>
    <string name="app_name">FoodDonationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue1">Continue</string>
    <string name="on_boarding_1">You have two hands\none to help yourself,\nthe second to help others.</string>
    <string name="on_boarding_2">When we give cheerfully and accept gracefully\neveryone is blessed.</string>
    <string name="on_boarding_3">Giving is not just about\nmaking a donation, it is about\nmaking a difference.</string>
    <string name="recent">Recent</string>
    <string name="history">History</string>
    <string name="name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_city">Select City</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_no">Enter Phoneno</string>
    <string name="Save">Save</string>
    <string name="request_for_food">Request For Food</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="food_quantity">Food Quantity</string>
    <string name="location">Location</string>
    <string name="select_time">Select Time</string>
    <string name="request">Request</string>
    <string name="request_from_format">Request By&#160;</string>
    <string name="request_quantity_format">Quantity For&#160;</string>
    <string name="people">&#160;People</string>
    <string name="request_location_format">At Location&#160;</string>
    <string name="request_phone_format">For More Information Call on&#160;</string>
    <string name="quanitiy_of_food_donated">Quantity of Food Donated <b> %1$s </b></string>
    <string name="location_recent_ngo">Location <b>%1$s</b></string>
    <string name="food_donated_date">Food Donated on <b>%1$s</b>Date</string>
    <string name="Time">Time<b> %1$s </b></string>
    <string name="accept">Accept</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="signup">Sign Up</string>
    <string name="Continue">Continue</string>
    <string name="NGO">NGO</string>
    <string name="Donar">Donar</string>
    <string name="no_Internet">no internet</string>
    <string name="accept_by_name">Accepted By <b> %1$s</b></string>
    <string name="Quantity_of_foodDonated">Quantity of Food Donated <b>%1$s</b> </string>
    <string name="Phone_Number">Phone Number <b>%1$s</b></string>
    <string name="status">Status <b>%1$s</b></string>
    <string name="date">Date <b>%1$s</b></string>
    <string name="location_ngo">Location <b>%1$s</b></string>
    <string name="ngo_name">NGO Name <b> %1$s</b></string>
    <string name="ngo_phone_number">NGO Phone Number <b>%1$s</b> </string>
    <string name="donation_accepted_date">Date of Donation Accepted <b>%1$s</b></string>
    <string name="Donated_food_quantity">Donated Food Quantity <b>%1$s</b></string>
    <string name="Location_donor">Location <b>%1$s</b></string>

    <string name="enter_email">Enter Email</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_recent_request_found">No Recent Request Found</string>
    <string name="no_history_found">No History Found</string>
</resources>