<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="20dp"
    style="@style/Card_Form">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"

        >

        <TextView
            android:id="@+id/tv_list_recent_donor_ngo_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/request_from_format"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/cherry_swash"
            android:textSize="18sp"
            android:lineHeight="26sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_list_recent_donor_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/request_quantity_format"
            android:textColor="@color/purple_1"
            android:fontFamily="@font/cherry_swash"
            android:textSize="18sp"
            android:lineHeight="26sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_list_recent_donor_ngo_name"
            app:layout_constraintStart_toStartOf="@+id/tv_list_recent_donor_ngo_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_recent_donor_ngo_name" />

        <TextView
            android:id="@+id/tv_list_recent_donor_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/request_location_format"
            android:textColor="@color/purple_1"
            android:fontFamily="@font/cherry_swash"
            android:textSize="18sp"
            android:lineHeight="26sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_list_recent_donor_quantity"
            app:layout_constraintStart_toStartOf="@+id/tv_list_recent_donor_quantity"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_recent_donor_quantity" />

        <TextView
            android:id="@+id/tv_list_recent_donor_ngo_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/request_phone_format"
            android:textColor="@color/purple_1"
            android:fontFamily="@font/cherry_swash"
            android:textSize="18sp"
            android:lineHeight="26sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_list_recent_donor_location"
            app:layout_constraintStart_toStartOf="@+id/tv_list_recent_donor_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_recent_donor_location" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/accept"
            style="@style/Button_accept"
            app:cornerRadius="20dp"
            android:textAllCaps="false"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_list_recent_donor_ngo_phone"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_recent_donor_ngo_phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>