<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tabs.ngo.recent.requsetform.RequestFormFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/logofooddonation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cherry_swash_bold"
        android:text="@string/request_for_food"
        android:textColor="#301934"
        android:textSize="25sp"
        android:lineHeight="32sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Card_Form"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                style="@style/Text_Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/quantity"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_form_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/purple_1"
                    android:textCursorDrawable="@drawable/cursarcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                style="@style/Text_Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/location"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_form_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/purple_1"
                    android:textCursorDrawable="@drawable/cursarcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                style="@style/Text_Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/select_time"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/purple_1"
                    android:textCursorDrawable="@drawable/cursarcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_request_form_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/request"
                android:paddingVertical="17dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>